--- a/components/Card/index.scss
+++ b/components/Card/index.scss
@@ -8,6 +8,7 @@
     background: #EBECEC;
     padding: 5px 10px 10px;
     right: 65px;
+    z-index: 6;
     &-product {
         margin-top: 5px;
         padding-bottom: 5px;
@@ -71,6 +72,22 @@
     &-empty {
         text-align: center;
         font-size: 24px;
+    }
+    &-total {
+        font-family: 'Reforma';
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        margin-top: 10px;
+        background-color: #dc0f0f;
+        border-radius: 4px;
+        border: none;
+        width: 100%;
+        font-size: 36px;
+        color: #fff;
+        &:hover {
+            background-color: rgb(253, 63, 70);
+        }
     }
 }
 
