--- a/components/Header/MobileMenu/index.scss
+++ b/components/Header/MobileMenu/index.scss
@@ -1,13 +1,25 @@
 @import '../../../variable.scss';
 
 .mobileMenu {
-    position: absolute;
-    z-index: 1;
+    position: fixed;
+    z-index: 7;
     width: 100%;
-    text-align: right;
-    padding: 0 20px 20px;
+    text-align: center;
+    padding: 40px 20px 20px 20px;
     background: #EBECEC;
-    top: 150px;
+    top: 0;
+    left: 0;
+    -webkit-box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+    &-close {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        img {
+            width: 30px;
+        }
+    }
     a {
         color: $linkColor;
         display: block;
