--- a/pages/product/index.scss
+++ b/pages/product/index.scss
@@ -50,6 +50,9 @@
             p {
                 margin-bottom: 20px;
             }
+            &-price {
+                font-size: 36px;
+            }
             &-button {
                 width: 100%;
                 height: 50px;
@@ -62,8 +65,12 @@
                 font-family: 'Reforma';
                 font-size: 29px;
                 cursor: pointer;
+                transition: background 0.5s ease-in-out;
                 &:hover {
-                    background-color: #535353;
+                    background: #535353;
+                }
+                &.added {
+                    background: #dc0f0f;
                 }
             }
         }
