--- a/components/Layout/index.scss
+++ b/components/Layout/index.scss
@@ -26,7 +26,7 @@ body {
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
-    background: #E6E8EA;
+    background: #EBEBEB;
     min-height: calc(100vh - 127px);
     padding-bottom: 150px;
     padding-top: 192.7px;
