add link to logo

--- a/components/Layout/index.scss
+++ b/components/Layout/index.scss
@@ -18,7 +18,7 @@ body {
 .appLayout {
     background-repeat: no-repeat !important;
     background-size: cover !important;
-    background-position: center !important;
+    background-position: center top !important;
 }
 
 .container {
