--- a/components/Card/index.scss
+++ b/components/Card/index.scss
@@ -9,7 +9,7 @@
     padding: 5px 10px 10px;
     right: 65px;
     z-index: 6;
-    &-product {
+    &-product { 
         margin-top: 5px;
         padding-bottom: 5px;
         border-bottom: 1px solid #C5C6C6;
@@ -66,6 +66,8 @@
                 outline: none;
                 font-size: 24px;
                 padding: 0 10px;
+                line-height: 30px;
+                display: block;
             }
         }
     }
@@ -85,6 +87,11 @@
         width: 100%;
         font-size: 36px;
         color: #fff;
+        outline: none;
+        height: 38px;
+        p {
+            line-height: 28px;
+        }
         &:hover {
             background-color: rgb(253, 63, 70);
         }
