--- a/components/Header/index.scss
+++ b/components/Header/index.scss
@@ -30,6 +30,7 @@
             text-transform: uppercase;
             padding: 0 10px 15px;
             transition: padding 0.2s ease-in-out;
+            transition: color 0.5s ease-in-out;
             &.active {
                 color: $activeLinkColor;
                 border-bottom: 3px solid #2B2A29;
@@ -40,6 +41,9 @@
             }
             &:last-child {
                 margin-right: 10px;
+            }
+            &:hover {
+                color: $activeLinkColor;
             }
         }
     }
@@ -61,9 +65,12 @@
             text-align: left;
             margin-top: -5px;
             cursor: pointer;
+            display: flex;
+            align-items: center;
         }
         &-cardWrapp {
             position: relative;
+            display: flex;
             &-basket {
                 width: 110px;
                 background: #939598;
@@ -71,6 +78,9 @@
                 padding: 0 15px;
                 margin: 0 5px;
                 transition: background 0.5s ease-in-out;
+                span {
+                    line-height: 18px;
+                }
                 &.added {
                     background: #dc0f0f;
                 }
