--- a/components/Header/index.scss
+++ b/components/Header/index.scss
@@ -67,6 +67,7 @@
             cursor: pointer;
             display: flex;
             align-items: center;
+            justify-content: center;
         }
         &-cardWrapp {
             position: relative;
@@ -79,7 +80,7 @@
                 margin: 0 5px;
                 transition: background 0.5s ease-in-out;
                 span {
-                    line-height: 18px;
+                    line-height: 35px;
                 }
                 &.added {
                     background: #dc0f0f;
@@ -181,7 +182,7 @@
                         display: none;
                     }
                     &-img {
-                        display: inline;
+                        display: inline-block;
                         
                     }
                 }
@@ -194,7 +195,7 @@
                     display: none;
                 }
                 &-img {
-                    display: inline;
+                    display: inline-block;
                 }
             }
         }
