--- a/pages/product/index.scss
+++ b/pages/product/index.scss
@@ -87,3 +87,74 @@
         }
     }
 }
+
+
+
+.groupProductPage {
+    padding: 0 25px;
+    padding-bottom: 90px;
+    &-title {
+        font-size: 40px;
+        margin-bottom: 24px;
+        text-transform: uppercase;
+    }
+    &-content {
+        &-img {
+            max-width: 727px;
+            position: relative;
+            margin: 0 auto 24px;
+            &-fruit {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100px;
+                height: 100px;
+                img {
+                    height: 80px;
+                }
+            }
+            &-bg {
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+            &-shadow {
+                position: absolute;
+                bottom: 10px;
+                left: 50%;
+                margin-left: -57px;
+            }
+            &-bottle {
+                position: relative;
+                z-index: 5;
+                margin-top: 30px;
+            }
+        }
+        &-description {
+            width: 100%;
+            font-size: 32px;
+            p {
+                margin-bottom: 20px;
+            }
+            &-price {
+                font-size: 36px;
+            }
+            &-button {
+                width: 100%;
+                height: 50px;
+                background: #434242;
+                text-transform: uppercase;
+                border-radius: 4px;
+                border: none;
+                color: #fff;
+                outline: none;
+                font-family: 'Reforma';
+                font-size: 29px;
+                cursor: pointer;
+                &:hover {
+                    background: #535353;
+                }
+            }
+        }
+    }
+}
